[package]
name = "can"
version = "0.1.0"
edition = "2021"
authors = ["Toby Lawrence <toby@nuclearfurnace.com>"]

description = "A general purpose library for common CAN types."
license = "MIT"
repository = "https://github.com/nuclearfurnace/rust-can"

[dependencies]
bitflags = "1.3"
bytes = "1.0.0"
embedded-can = "0.3.0"
socketcan = "1.7.0"
