[package]
name = "can"
version = "0.2.1-alpha.0"
edition = "2021"
authors = ["Toby Lawrence <toby@nuclearfurnace.com>"]

description = "A general purpose library for common CAN types."
license = "MIT"
repository = "https://github.com/nuclearfurnace/rust-can"

[features]
default = ["embedded-can-compat", "socketcan-compat"]
embedded-can-compat = ["embedded-can"]
socketcan-compat = ["socketcan"]

[dependencies]
bitflags = "1.3"
bytes = "1.0.0"
embedded-can = { version = "0.3.0", default-features = false, optional = true }
socketcan = { version = "1.7.0", default-features = false, optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
